Fixed issue with tooltips in NoUSlider wrapping texts inside it, ref #1083

--- a/wp-content/themes/wp-property-pro/style.css
+++ b/wp-content/themes/wp-property-pro/style.css
@@ -2379,6 +2379,10 @@ html[xmlns] .propertypro-testimonial .propertypro-slides {
     background: #d03528 !important;
 }
 
+.noUi-tooltip {
+    white-space: nowrap;
+}
+
 /** Utils **/
 .propertypro-left {
     left: 0;
